static/css/s2.css
/* ... */
.textList .sheet .sheetViews {
  float: right;
  color: #999;
  font-size: 12px;
}
.textList .sheet .sheetAuthor,
.textList .note .noteAuthor {
  color: #999;
  font-size: 15px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.textList .sheet .sheetTitle {
  display: block;
  margin-top: 14px;
  font-size: 17px;
  font-style: italic;
  text-align: left;
  color: #333;
}
.textList .sheet .sheetTitle .sheetIcon {
  width: 14px;
  height: 14px;
  opacity: 0.4;
  margin-right: 6px;
  vertical-align: -1px;
}
.textList .sheet .sheetTags {
  margin-top: 6px;
  font-size: 13px;
  color: #666;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  text-align: left;
}
.interface-hebrew .textList .sheet .sheetTags {
  text-align: right;
}
.textList .sheet .sheetTag {
  color: inherit;
  display: inline-block;
  white-space: nowrap;
}
.textList .sheet .sheetTag .separator {
  display: inline-block;
  margin-right: 8px;
}
.textList .sheetList {
  padding-top: 40px;
}
.textList .sheetList + .sheetList {
  border-top: 1px solid #E6E5E6;
}
.textList .note .noteAuthorInfo {
  margin-bottom: 14px;
}
.textList .note .noteTitle {
  font-weight: bold;
}
.textList .note .noteTitle,
.textList .note .noteText {
  font-size: 16px;
}
.textRange .numberLabel {
  position: absolute;
  top: 14px;
}
.english .textRange .numberLabel {
  left: -24px;
}
.english .textRange .numberLabel.itag {
  right: -30px;
  left: initial;
}
.hebrew .textRange .numberLabel,
.bilingual .textRange .numberLabel  {
  right: -30px;
}
.multiPanel .textRange .numberLabel{
  display: none;
}
.multiPanel .textRange .numberLabel.itag{
  display: block;
  color: #4871bf;
}
.textRange.lowlight .numberLabel {
  color: #999;
}
.readerPanel.bilingual .connectionsPanel .he {
  display: none;
}
.textListTextRangeBox {
  position: relative;
}
.textListTextRangeBox:hover .moderatorLinkOptions {
  display: block;
}
.moderatorLinkOptions {
  display: none;
  cursor: pointer;
  font-size: 14px;
  color: #999;
  letter-spacing: 1px;
  margin: -20px 0 10px;
}
.interface-hebrew .moderatorLinkOptions {
  left: auto;
  right: 0;
}
.moderatorLinkOptions > div:hover {
  text-decoration: underline;
}
.toolsMessage {
  margin: 130px 0;
  text-align: center;
  font-size: 18px;
}
.toolsButton {
  display: block;
  color: #333;
  border-top: 1px solid #CCC;
  cursor: pointer;
  font-size: 16px;
  letter-spacing: 1px;
  padding: 20px 26px 20px 0;
}
.toolsButton:hover {
  text-decoration: none;
  color: inherit;
}
.toolsButton .en {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.toolsButton .toolsButtonIcon {
  /*float: right;*/
  color: #ccc;
  font-size: 22px;
  margin-right: 15px;
}
.toolsButton img.toolsButtonIcon {
  width: 22px;
  height: 22px;
  opacity: 0.2;
  vertical-align: middle;
}
.shareInput {
  width: 100%;
  box-sizing: border-box;
  border-radius: 7px;
  border: 1px solid #F7F7F7;
  box-shadow: none;
  font-size: 18px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  padding: 20px 26px;
  margin-bottom: 30px;
}
.addToSourceSheetBox {
  position: relative;
}
.addToSourceSheetBox input {
  padding: 13px 12px;
  margin: 0;
  cursor: pointer;
  font-size: 15px;
  border-radius: 4px;
  box-shadow: none;
  border: 1px solid #E9E9E9;
  width: 60%;
  box-sizing: border-box;
}
.addToSourceSheetBox .button {
  width: 100%;
  text-align: center;
  margin: 0;
}
.addToSourceSheetBox .button.small {
  width: 37%;
  box-sizing: border-box;
  padding: 12px;
  margin: 0;
  float: right;
}
.addToSourceSheetBox .newSheet {
  border-top: 1px solid #E9E9E9;
  padding: 14px 22px;
}
.confirmAddToSheet {
  text-align: center;
  background-color: #F9F9F7;
}
.confirmAddToSheet .message {
  font-size: 18px;
  margin-bottom: 30px;
  font-style: italic;
}
.confirmAddToSheet .button {
  width: 100%;
}
.connectionsPanel .allSheetsLink,
.connectionsPanel .allNotesLink {
  display: block;
  margin-top: 10px;
}
.interface-hebrew .allNotesLinks {
  text-align: left;
}
.noteList + .noteList {
  border-top: 1px solid #ccc;
}
.connectionsPanel .loadingMessage {
  margin-top: 40px;
}
.connectionsPanel textarea.noteText {
  width: 100%;
  min-height: 100px;
  border: none;
  border-radius: 4px;
  padding: 20px 25px;
  box-sizing: border-box;
  font-size: 18px;
  font-family: "adobe-garamond-pro", Georgia, serif;
  margin-bottom: 10px
}
.connectionsPanel .noteSharingToggle {
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-bottom: 12px;
}
.connectionsPanel .notePrivateButton,
.connectionsPanel .notePublicButton {
  width: 50%;
  display: inline-block;
  text-align: center;
  color: #CCC;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 15px;
  letter-spacing: 1px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  box-sizing: border-box;
}
.connectionsPanel .notePrivateButton.active,
.connectionsPanel .notePublicButton.active {
  background-color: white;
  color: #666;
}
.connectionsPanel .notePrivateButton {
  border-right: 1px solid #ccc;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.hebrew .connectionsPanel .notePrivateButton {
  border-left: 1px solid #ccc;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-right: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}
.connectionsPanel .line {
  width: 100%;
  border-bottom: 1px solid #ccc;
  margin: 40px 0;
}
.connectionsPanel .deleteNote {
  text-align: center;
  padding: 18px 0;
  color: #999;
  font-size: 15px;
  cursor: pointer;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.connectionsPanel.textList .note {
  padding: 30px 0;
}
.connectionsPanel.textList .note {
  border-top: 1px solid #E6E5E6;
}
.connectionsPanel.textList .note:first-child {
  border-top: none;
}
.connectionsPanel .noteButtons {
  float: right;
}
/* ... */

